--- a/index.html
+++ b/index.html
@@ -6,10 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>for practice</title>
     <link rel="shortcut icon" href="images/favicons/home/icons8-favicon-64.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <div class="login">
+        <form action="">
+            <h3>Please Login</h3>
+            <input type="email" placeholder="Your email" name="" id="">
+            <br>
+            <input type="password" placeholder="Your password" name="" id="">
+            <br>
+            <br>
+            <input type="submit" value="Login">
 
+        </form>
+    </div>
+    <div>
+        <h3> 1st blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laboriosam aspernatur modi necessitatibus
+            adipisci velit facilis dicta mollitia doloribus eos?</p>
+    </div>
+    <div>
+        <h3>2nd blog</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quis non vel, animi fugit dolores tempore
+            nisi ab quia laboriosam!
+        </p>
+    </div>
+    <div>
+        <h3> 3rd blog</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, repellat voluptates maiores et ab eum
+            veniam minima voluptate fugit in!
+        </p>
+    </div>
+</body>
+<div>
+    <h3> 4th blog</h3>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eveniet animi aperiam pariatur quo fugiat,
+        laudantium veritatis. Error, eveniet earum.
+    </p>
+</div>
+</body>
+<div>
+    <h3> 5th blog</h3>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim veritatis, commodi possimus quae voluptatibus a
+        harum nobis sint iste beatae!
+    </p>
+</div>
+<div>
+    <h3> 6th blog</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur corrupti neque eligendi molestiae nam,
+        nesciunt numquam quam aut in velit.</p>
+</div>
 </body>
 
 </html>
