added footer,text area , changed background color, image,

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>for practice</title>
+    <title>Home</title>
     <link rel="shortcut icon" href="images/favicons/home/icons8-favicon-64.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <div class="login">
+    <div class="login1">
         <form action="">
             <h3>Please Login</h3>
             <input type="email" placeholder="Your email" name="" id="">
             <br>
             <input type="password" placeholder="Your password" name="" id="">
             <br>
-            <br>
+            <input type="checkbox" name="" id=""><br>
+            I accept your terms and conditions.
+
             <input type="submit" value="Login">
 
         </form>
@@ -62,6 +64,13 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur corrupti neque eligendi molestiae nam,
         nesciunt numquam quam aut in velit.</p>
 </div>
+<div>
+<textarea name="" id="">Your comment here...</textarea>
+<input type="submit" value="Submit">
+
+</div>
+
+<footer>@all right reserved</footer>
 </body>
 
 </html>
