added log in page

--- a/index.html
+++ b/index.html
@@ -10,24 +10,15 @@
 </head>
 
 <body>
-    <div class="login1">
-        <form action="">
-            <h3>Please Login</h3>
-            <input type="email" placeholder="Your email" name="" id="">
-            <br>
-            <input type="password" placeholder="Your password" name="" id="">
-            <br>
-            <input type="checkbox" name="" id=""><br>
-            I accept your terms and conditions.
-
-            <input type="submit" value="Login">
-
-        </form>
-    </div>
+    
     <div>
         <h3> 1st blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laboriosam aspernatur modi necessitatibus
-            adipisci velit facilis dicta mollitia doloribus eos?</p>
+            adipisci velit facilis dicta mollitia doloribus eos Lorem ipsum dolor, sit amet consectetur adipisicing
+            elit. Necessitatibus reprehenderit impedit consequuntur eos sint in quis? Maiores quis quam repellat aut
+            exercitationem quia, quos dolorem commodi debitis aperiam est aspernatur deleniti quisquam odit consequuntur
+            illo reprehenderit soluta esse explicabo distinctio! Distinctio consequatur reprehenderit voluptate
+            provident molestias, praesentium eaque veniam deserunt.</p>
     </div>
     <div>
         <h3>2nd blog</h3>
@@ -65,8 +56,8 @@
         nesciunt numquam quam aut in velit.</p>
 </div>
 <div>
-<textarea name="" id="">Your comment here...</textarea>
-<input type="submit" value="Submit">
+    <textarea name="" id="">Your comment here...</textarea>
+    <input type="submit" value="Submit">
 
 </div>
 
